Using G1 in Hydra, and small fixes to code to avoid GC.